--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,9 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+Assets/Scenes/Garage/Source/Textures/Garage Blue.psd
+Assets/Classical_city/Textures/vegetation_b.tif
+Assets/Classical_city/Textures/props_b.tif
+Assets/Classical_city/Textures/building_a.tif
+Assets/Classical_city/Textures/ground.tif
+Assets/Classical_city/Textures/props_a.tif
